--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -6,15 +6,22 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
-<body>
-    {% if latest_question_list %}
-        <ul>
-        {% for question in latest_question_list %}
-            <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No polls are available.</p>
-    {% endif %}
+<body class="body">
+    <div class="center-div">
+        <div class="title">
+            <h2 class="header">Выберите вопрос и пройдите опрос</h2>
+        </div>
+        <div class="list">
+            {% if latest_question_list %}
+                <ul class="ul-main">
+                {% for question in latest_question_list %}
+                    <li class="li-main"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+                {% endfor %}
+                </ul>
+            {% else %}
+                <p>No polls are available.</p>
+            {% endif %}
+        </div>
+    </div>
 </body>
 </html>
