--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <div class="center-div">
         <div class="title">
-            <h2 class="header">Выберите вопрос и пройдите опрос</h2>
+            <h2 class="header">IT-голосование</h2>
         </div>
         <div class="list">
             {% if latest_question_list %}
