--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -7,7 +7,8 @@
 .li-main {
     width: 478px;
     list-style-type: none;
-    background: #27d45c;
+    background: #03a9f4;
+;
     border: 1px solid #33333390;
     border-radius: 4px;
     padding: 6px 14px;
